--- a/Event-details.html
+++ b/Event-details.html
@@ -16,7 +16,8 @@
     <!-- Event Details Section -->
     <section id="event-details">
         <h2>Les Details De l'Evenement:</h2>
-        <p>Vous serez assignés à l'une des 8 équipes et devrez choisir parmi quatre formations : UI/UX Design, Web Front-end, Web Back-end et Deep Learning, avec la possibilité de vous inscrire en binôme. 
+        <p>Le Training Camp est un camp de formations accélérées axées sur les technologies d’actualité et tout ce qui touche l’entrepreneuriat. Cet événement s’étend sur 3 jours successifs et est destiné aux étudiants souhaitant acquérir ou développer des compétences dans les domaines cités. Ceci dans un cadre stimulant la créativité, l’échange et le travail collaboratif, selon le concept du Learning by Doing.
+            Vous serez assignés à l'une des 8 équipes et devrez choisir parmi quatre formations : UI/UX Design, Web Front-end, Web Back-end et Deep Learning, avec la possibilité de vous inscrire en binôme. 
 
             L'objectif du camp est d'apprendre tout en résolvant une problématique spécifique présentée sous forme de cahier des charges. À la fin, vous présenterez un projet, le tout dans un esprit de "Learning by doing".
             
@@ -24,11 +25,20 @@
         
     </section>
 
+<!-- Speaker/Performer Section -->
+<section id="speaker">
+    <h2>Formateur</h2>
+    <p>BILAL DAHMANE SBAIHIA: UX/UI design </p>
+    <p>IMANE HAMZAOUI: Deep learning</p>
+    <p>MOHAMMED GOUAOURI: Web backend</p>
+    <p>FAWZI CHIBAH: Web frontend</p>
+</section>
+
 
     <!-- Venue Section -->
     <section id="venue">
-        <h2>Ecole Supérieur d'Informatique (ESI) </h2>
-        <img src="image-esi.jpg" alt="Image du lieu">
+        <h2>Ecole Supérieur d'Informatique (ESI), Oued Semar, Alger </h2>
+        <img src="tcx-image.html.png" alt="Image du lieu">
     </section>
 
     <!-- Registration Button -->
